add signup keys
